--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/kumbh-sans": "^5.0.20",
     "@fontsource-variable/material-symbols-rounded": "^5.0.33",
     "@fontsource/material-symbols-rounded": "^5.0.33",
+    "aos": "^3.0.0-beta.6",
     "import": "^0.0.6",
     "next": "14.2.4",
     "react": "^18",
