--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/nextjs": "^8.2.4",
     "@storybook/react": "^8.2.4",
     "@storybook/test": "^8.2.4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
