--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/kumbh-sans": "^5.0.20",
     "@fontsource-variable/material-symbols-rounded": "^5.0.33",
     "@fontsource/material-symbols-rounded": "^5.0.33",
+    "@next/third-parties": "^14.2.5",
     "aos": "^3.0.0-beta.6",
     "html-react-parser": "^5.1.12",
     "import": "^0.0.6",
