--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "import": "^0.0.6",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
@@ -37,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "daisyui": "^4.12.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
